--- a/css/public.css
+++ b/css/public.css
@@ -5,8 +5,11 @@
     --gray-coler-2: #e8e8e8;
     --gray-coler-3: #d3d3d3;
     --blue-coler-1: #0086cd;
-    --blue-coler-2: #006296;
+    --blue-coler-2: #007abc;
+    --blue-coler-3: #006296;
     --black-coler-1: #4c4c4c;
+    --black-coler-2: #2e2e2e;
+    --yellow-coler-1: #fff46e;
 
 }
 
@@ -17,7 +20,18 @@
 .bg-gray-coler-1 {
     background-color: var(--gray-coler-1);
 }
-
+.txt-black-2 {
+    color: var(--black-coler-2);
+}
+.txt-blue-1{
+    color: var(--blue-coler-1);
+}
+.txt-blue-3 {
+    color: var(--blue-coler-3);
+}
+.txt-blue-2{
+    color: var(--blue-coler-2);
+}
 body {
     background: #ffffff;
     font-family: 'Open Sans', sans-serif;
@@ -27,7 +41,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 15px !important;
+        font-size: 17px !important;
     }
 }
 
@@ -35,7 +49,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 18px !important;
+        font-size: 19px !important;
     }
 }
 
@@ -44,7 +58,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 18px !important;
+        font-size: 19px !important;
     }
 }
 
@@ -134,10 +148,42 @@ body {
 }
 
 a{
-    color: var(--blue-coler-2);
+    color: var(--blue-coler-3);
     font-weight: 500;
+    font-size: 0.6rem;
+    line-height: 0.8rem;
 }
 a:hover{
     text-decoration: none;
-    color: var(--blue-coler-1);
+    color: var(--blue-coler-1)!important;
+}
+
+.navbar_header{
+    background-color: var(--yellow-coler-1);
+}
+.nav_item ul li a{
+    color: var(--blue-coler-3);
+    font-weight: 500;
+}
+h1{
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+h2{
+    font-size: 0.75rem;
+    font-weight: 600;
+}
+p{
+    font-size: 0.7rem;
+}
+
+h2 a{
+        font-size: 0.75rem;
+            font-weight: 600;
+}
+
+h3 a {
+    font-size: 0.65rem;
+    font-weight: 600;
 }
