--- a/css/public.css
+++ b/css/public.css
@@ -20,6 +20,9 @@
 .bg-gray-coler-1 {
     background-color: var(--gray-coler-1);
 }
+.txt-gray-1 {
+    color: var(--gray-coler-2);
+}
 .txt-black-2 {
     color: var(--black-coler-2);
 }
@@ -136,6 +139,19 @@ body {
         padding-top: 0.1rem;
 }
 
+.header-between{
+    border-bottom-width: 0.2rem;
+        border-bottom-style: solid;
+        border-image: linear-gradient(to bottom, #f6f7f6 89%, #e9e9e9 100%) 18;
+}
+
+.underlined_div{
+    width: 7rem;
+        height: 2px;
+        background-image: linear-gradient(rgb(145 145 145), rgb(209 209 209));
+        margin: auto;
+}
+
 .form_search_button_hover{
     width: 1.8rem;
     height: 1.4rem;
@@ -164,6 +180,7 @@ a:hover{
 .nav_item ul li a{
     color: var(--blue-coler-3);
     font-weight: 500;
+    font-size: 0.7rem;
 }
 h1{
     font-size: 1rem;
