--- a/css/public.css
+++ b/css/public.css
@@ -52,7 +52,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 18px !important;
+        font-size: 20px !important;
     }
 
     .navbar_header {
@@ -70,7 +70,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 17px !important;
+        font-size: 21px !important;
     }
 
     .navbar_header {
@@ -88,7 +88,7 @@ body {
 
     /* Styles */
     html {
-        font-size: 20px !important;
+        font-size: 21px !important;
     }
 
     .navbar_header {
@@ -264,4 +264,19 @@ h3 a {
     color: #757575;
     font-style: italic;
     font-size: 0.5rem!important;
+}
+
+.breadcrumb-item{
+    font-size: 0.7rem;
+}
+
+.breadcrumb-item a{
+    font-size: 0.7rem;
+}
+
+.fs_0_6{
+    font-size: 0.6rem;
+}
+.fs_0_7 {
+    font-size: 0.7rem;
 }
